  * init: Fix bugs in submodule .git symlink fixup, that occurred when
    initializing in a subdirectory of a submodule and a submodule of a
    submodule.
  * WebDAV: Set depth 1 in PROPFIND request, for better compatability with
    some servers. Thanks, wzhd.
  * WebDAV: Remove a bogus trailing slash from the end of the url to the
    temporary store location for a key. Thanks, wzhd.

 -- Joey Hess <id@joeyh.name>  Thu, 28 Jan 2016 13:53:09 -0400

git-annex (6.20160126) unstable; urgency=medium

  * Fix nasty reversion in the last release that broke sync --content's
    handling of many preferred content expressions.
  * whereis --json: Urls are now listed inside the remote that claims them,
    rather than all together at the end.
  * info, add, whereis, find: Support --batch mode.
  * Force output to be line-buffered, even when it's not connected to the
    terminal. This is particuarly important for commands with --batch
    output, which was not always being flushed at an appropriate time.
  * add, import: Support --json output.
  * addurl --json: Include field for added key (unless the file was
    added directly to git due to annex.largefiles configuration.)
    (Also done by add --json and import --json)
  * registerurl: Check if a remote claims the url, same as addurl does.
  * Bug fix: Git config settings passed to git-annex -c did not always take
    effect.
  * assistant: Use udisks2 dbus events to detect when disks are mounted,
    instead of relying on gnome/kde stuff that is not stable.
  * Fix build with QuickCheck 2.8.2
  * matchexpression: New plumbing command to check if a preferred content
    expression matches some data.
  * Removed the webapp-secure build flag, rolling it into the webapp build
    flag.
  * Removed the quvi, tahoe, feed, and tfds build flags, adding
    aeson feed and regex-tdfa to the core dependencies.
  * Roll the dns build flag into the assistant build flag.