@@ -1,0 +1,10 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2016-02-09T19:35:10Z"
+ content="""
+Sure, I've added that as requeststyle=path. I have not tested it, so once
+you get an updated build let me know if it works.
+
+(Should be available in the daily linux autobuilds within about an hour.)
+"""]]
