@@ -26,6 +26,8 @@ git-annex (6.20160127) UNRELEASED; urgency=medium
     some servers. Thanks, wzhd.
   * WebDAV: Remove a bogus trailing slash from the end of the url to the
     temporary store location for a key. Thanks, wzhd.
+  * S3: Allow configuring with requeststyle=path to use path-style bucket
+    access instead of the default DNS-style access.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Jan 2016 13:53:09 -0400
 
